Add Skills and Certifications section to right rectangle with optimized font sizes and layout

--- a/index.html
+++ b/index.html
@@ -41,7 +41,44 @@
     </div>
 
     <div class="right">
-        <!-- Projects will go here -->
+        <div class="section">
+            <h3 class="section-title">SKILL SET</h3>
+            <div class="skills-category">
+                <h4 class="category-title">Programming Languages</h4>
+                <p class="skills-text">Python, C, Java</p>
+            </div>
+            <div class="skills-category">
+                <h4 class="category-title">Web Technologies</h4>
+                <p class="skills-text">HTML, CSS, JavaScript</p>
+            </div>
+            <div class="skills-category">
+                <h4 class="category-title">Core Competencies</h4>
+                <p class="skills-text">Data Structures & Algorithms, Object-Oriented Programming (OOP), Problem-Solving, Software Development</p>
+            </div>
+            <div class="skills-category">
+                <h4 class="category-title">Tools & Platforms</h4>
+                <p class="skills-text">Git/GitHub, VS Code</p>
+            </div>
+        </div>
+
+        <div class="section">
+            <h3 class="section-title">CERTIFICATIONS</h3>
+            <div class="certification-item">
+                <h4 class="cert-title">Python Programming</h4>
+                <p class="cert-provider">Udemy</p>
+                <p class="cert-description">Comprehensive training on Python fundamentals, data structures, functions, and file handling.</p>
+            </div>
+            <div class="certification-item">
+                <h4 class="cert-title">UI/UX Design</h4>
+                <p class="cert-provider">Larsen & Toubro (L&T Edutech) - Awaiting Certificate</p>
+                <p class="cert-description">Practical understanding of user experience design, wireframing, and design thinking principles.</p>
+            </div>
+            <div class="certification-item">
+                <h4 class="cert-title">Large Language Models (LLM)</h4>
+                <p class="cert-provider">NPTEL (IIT Course) - Ongoing</p>
+                <p class="cert-description">Covers the foundations, architecture, and applications of LLMs.</p>
+            </div>
+        </div>
     </div>
 </div>
 </body>
